# essakurwa

./: admin-login.html  admin.html  app.py  card-view.html  card.html  gen-token.html  gen.html  id.html  pyproject.toml  replit.md  requirements.txt
assets/: bar.js  card.js  main.css
attached_assets/: Pasted-DEBUG-Looking-for-document-with-token-hash-818c395b49c4_1765812292792.txt  Pasted-DEBUG-Looking-for-document-with-token-hash-f67c720f7b8c_1765812937949.txt  Pasted-DEBUG-Looking-for-document-with-token-hash-f67c720f7b8c_1765813316458.txt
