[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.5.0",
    "flask-talisman>=1.1.0",
    "psycopg[binary]>=3.1.13",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "bcrypt>=4.1.0",
    "gunicorn>=20.1.0",
    "werkzeug>=3.0.0",
]
